<resources>
    <string name="app_name">ToDo</string>

    <!-- For Sign Up Page / Activity -->
    <string name="go_to_sign_in">Already have an account? Sign In</string>

    <!-- For Sign In Page / Activity -->
    <string name="go_to_sign_up">Don\'t have an account? Sign Up</string>
    <string name="title_activity_task">TaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="new_task">Add new task</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_new_task">Add new task</string>
</resources>