<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@drawable/alt_bg_img"
        tools:context=".AddTaskActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:srcCompat="@drawable/create_img"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_task"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
                android:id="@+id/title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/title" android:minHeight="48dp"/>

        <EditText
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text_field_styling"
                android:lines="7"
                android:gravity="top"
                android:hint="@string/description"/>

        <Button
                android:id="@+id/add_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@drawable/main_btn_styling"
                android:textColor="@color/dark_royal_purple"
                android:text="@string/add"/>

    </LinearLayout>

    <Button
            android:text="Back"
            android:padding="10dp"
            android:textSize="12sp"
            android:onClick="goToTaskAct"
            android:background="@color/dark_royal_purple"
            android:textColor="@color/tropical_blue"
            android:layout_width="159dp"
            android:layout_height="52dp"
            android:id="@+id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_layout"
            app:layout_constraintVertical_bias="0.271"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>