<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/royal_purple"
        android:orientation="vertical"
        tools:context=".TaskActivity">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/gridLayout">

        <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:onClick="goToProfile"
                android:textSize="30sp"
                android:text="@string/profile"
                android:minHeight="48dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_out_styling"
                android:textColor="@color/tropical_blue"
                android:text="@string/sign_out"
                android:layout_marginEnd="5dp"
                android:layout_row="0"
                android:onClick="goOut"
                android:layout_column="2"/>
    </GridLayout>


    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerview"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/gridLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/add_new_task" app:layout_constraintVertical_bias="0.393"/>
    <Button
            android:id="@+id/add_new_task"
            android:text="@string/new_task"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/main_btn_styling"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            android:layout_marginBottom="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>